[gd_scene load_steps=4 format=2]

[ext_resource path="res://PNG/ufoGreen.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 47.0

[node name="Enemy" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )
verticalSpeed = 80.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, 0 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.5, -2.32458e-06 )
scale = Vector2( 4.15, 4.2 )

[node name="FiringPosition" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
